--- a/.dot.yml
+++ b/.dot.yml
@@ -17,6 +17,7 @@ role:
     - php --version
     - command: ./install-composer.sh
       os: ["centos"]
-    - composer --version
+    - command: composer --version
+      shell: /bin/bash
     # - PATH="$HOME/.config/composer/vendor/bin:$PATH"
     # - export PATH=$PATH:~/.composer/vendor/bin
