--- a/.dot.yml
+++ b/.dot.yml
@@ -17,7 +17,9 @@ role:
     - php --version
     - command: ./install-composer.sh
       os: ["centos"]
-    - command: composer --version
-      shell: /bin/bash
+    - echo $PATH
+    - ls -la /usr/local/bin
+    - ls -la $HOME/bin
+    - composer --version
     # - PATH="$HOME/.config/composer/vendor/bin:$PATH"
     # - export PATH=$PATH:~/.composer/vendor/bin
