--- a/.dot.yml
+++ b/.dot.yml
@@ -15,12 +15,12 @@ role:
     - name: composer
       os: ["!centos"]
   post_install:
-    - php --version # || true
+    - php --version
     - command: ./install-composer.sh
       os: ["centos"]
     - |
       PATH="$PATH:$HOME/bin"
-      composer --version # || true
+      composer --version
     # - PATH="$HOME/.config/composer/vendor/bin:$PATH"
     # - export PATH=$PATH:~/.composer/vendor/bin
   # post_remove:
